Fix footer and page content overlapping

--- a/default/static/css/custom.css
+++ b/default/static/css/custom.css
@@ -62,17 +62,13 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 100px;
+    height: 10rem;
     background-color: #222;
 }
-.footer.logo.home-footer {
-    position: relative;
-}
-.footer-brand.ocp-logo{
+.footer-brand.ocp-logo {
     max-width: 100px;
 }
-.footer-brand.ocp-logo svg
-{
+.footer-brand.ocp-logo svg {
     height: 80px;
     margin-top: 10px;
 }
@@ -80,9 +76,8 @@
     position: relative;
     min-height: 100vh;
 }
-}
 .content-wrap.ocp-content {
-    padding-bottom: 2.5rem;
+    padding-bottom: 12rem;
 }
 .form-send {
     margin-bottom: 0;
